--- a/CarRentBusiness/pom.xml
+++ b/CarRentBusiness/pom.xml
@@ -31,6 +31,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>5.0</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
@@ -66,6 +72,14 @@
             <artifactId>jstl</artifactId>  
             <version>${jstl.version}</version>  
         </dependency>  
+        
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.3</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
